@@ -146,7 +146,7 @@
 \end{picture}
 
 \begin{flushright}
-\large\bf{Climate Data Operators \\ Version 1.0.2 \\ September 2006}
+\large\bf{Climate Data Operators \\ Version 1.0.3 \\ October 2006}
 \end{flushright}
 
 \vfill
